--- a/main/kosmos/main.html
+++ b/main/kosmos/main.html
@@ -25,7 +25,7 @@
                 <div class="test-card">
                     <h4>🌟 Эволюция звезд</h4>
                     <p>Тест на знание процессов звездной эволюции и жизненного цикла звезд</p>
-                    <a href="документация/Тест Эволюция звезд.docx" class="test-btn">Пройти тест</a>
+                    <a href="html/practicals/pr-3.html" class="test-btn">Пройти тест</a>
                 </div>
 
                 <div class="test-card">
